www: add display leagues page
