# docs/swagger.yaml
@@ -48,7 +48,11 @@ definitions:
     properties:
       creator_id:
         type: integer
+      creator_username:
+        type: string
       id:
+        type: integer
+      member_count:
         type: integer
       name:
         type: string
